--- a/cau_2.html
+++ b/cau_2.html
@@ -3,33 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="cau_2.js"></script>
 </head>
 <body>
-    <script>
-        function cal(n){
-            let sum = 0;
-            for (let i = 1; i < n; i++) {
-                if (n % i === 0) {
-                    sum += i;
-                }
-            }
-            return sum;
-        }
-        function ket_qua(a, b) {
-            if (a <= 0 || b <= 0) {
-                return false;
-            }
-            let sum_a = cal(a);
-            let sum_b = cal(b);
-            let ktra = sum_a === b && sum_b === a;
-            if (ktra) {
-                return true;
-            }
-            else {
-                return false;
-            }
-        }
-        console.log(ket_qua(220, 284));
-    </script>
+
 </body>
 </html>
